--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <link rel="stylesheet" href="assets/fontawesome/css/all.min.css" />
 
         <!-- Link Swiper's CSS -->
-        <link rel="stylesheet" href="assets/swiper-slider/swiper-bundle.min.css"/>
+        <link rel="stylesheet" href="assets/swiper-slider/swiper-bundle.min.css" />
 
         <!-- wow-master CSS -->
-        <link rel="stylesheet" href="assets/wow-master/css/animate.css"/>
+        <link rel="stylesheet" href="assets/wow-master/css/animate.css" />
 
         <!-- Style CSS -->
         <link rel="stylesheet" href="assets/css/style.css" />
@@ -77,7 +77,9 @@
                             <div class="row main-nav align-items-center">
                                 <div class="col-7 col-md-3">
                                     <div class="logo">
-                                        <img src="assets/images/logo/logo.png" class="img-fluid" alt="Responsive image" />
+                                        <a href="index.html">
+                                            <img src="assets/images/logo/logo.png" class="img-fluid" alt="Responsive image" />
+                                        </a>
                                     </div>
                                 </div>
 
@@ -89,7 +91,7 @@
 
                                 <div class="col-5 col-md-9">
                                     <ul class="nav-links d-flex flex-end justify-content-end">
-                                        <li><a href="#">Home</a></li>
+                                        <li><a href="index.html">Home</a></li>
                                         <li><a href="#">About</a></li>
                                         <li><a href="#">Services</a></li>
                                         <li><a href="#">Product</a></li>
@@ -159,7 +161,7 @@
                     <div class="row">
                         <!-- service-item-heading -->
                         <div class="col-md-12">
-                            <div class="service-item-heading text-center py-5  wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".5s" >
+                            <div class="service-item-heading text-center py-5 wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".5s">
                                 <h2>Services</h2>
                             </div>
                         </div>
@@ -179,9 +181,10 @@
                                                 Websites are a necessity to compete in today’s business landscape. We offer a few different types of web design services, including templates, semi-custom, and fully custom websites. Each of
                                                 our web design offerings includes a dedicated account manager, an in-depth kickoff meeting, and more.
 
-                                                <span><a href="#"><i class="fas fa-angle-double-right"></i> Read More..</a></span>
+                                                <span>
+                                                    <a href="website-design-development.html"><i class="fas fa-angle-double-right"></i> Read More..</a>
+                                                </span>
                                             </p>
-
                                         </div>
                                     </div>
                                 </div>
@@ -197,7 +200,9 @@
                                             <p>
                                                 Wezapps Limited is providing a wide range of software solutions throughout the years. Web Softwares are growing in popularity because they can be updated and maintained without having to
                                                 distribute or install software on computers and because of their cross-platform compatibility.
-                                                <span><a href="#"><i class="fas fa-angle-double-right"></i> Read More..</a></span>
+                                                <span>
+                                                    <a href="web-app-software-development.html"><i class="fas fa-angle-double-right"></i> Read More..</a>
+                                                </span>
                                             </p>
                                         </div>
                                     </div>
@@ -214,7 +219,9 @@
                                             <p>
                                                 Wezapps Limited offers various Smartphone application.Smartphone application is a magical tool that makes life easier, faster and colorful.
 
-                                                <span><a href="#"><i class="fas fa-angle-double-right"></i> Read More..</a></span>
+                                                <span>
+                                                    <a href="smartphone-app-development.html"><i class="fas fa-angle-double-right"></i> Read More..</a>
+                                                </span>
                                             </p>
                                         </div>
                                     </div>
@@ -230,8 +237,10 @@
                                             <h3>Social Media Marketing</h3>
                                             <p>
                                                 Business in today’s day and age is dominated by customers and their demands. People prefer to see referrals, reviews over Google search results, or a website before purchasing a product.
-                                                
-                                                <span><a href="#"><i class="fas fa-angle-double-right"></i> Read More..</a></span>
+
+                                                <span>
+                                                    <a href="social-media-marketing.html"><i class="fas fa-angle-double-right"></i> Read More..</a>
+                                                </span>
                                             </p>
                                         </div>
                                     </div>
@@ -248,7 +257,9 @@
                                             <p>
                                                 We provide various ready and customisable software for your organisation for various need and requirement such as, ERP, CRM, information system, and management and regulatory systems.
 
-                                                <span><a href="#"><i class="fas fa-angle-double-right"></i> Read More..</a></span>
+                                                <span>
+                                                    <a href="system-implementation-integration.html"><i class="fas fa-angle-double-right"></i> Read More..</a>
+                                                </span>
                                             </p>
                                         </div>
                                     </div>
@@ -265,7 +276,9 @@
                                             <p>
                                                 Vulnerability assessment is basic and first step of defending your system attacks. You may setup you system under secure environment, but because of mal configuration or mal implementation,
                                                 valuable information may become compromised and your business/service may be in jeopardy.
-                                                <span><a href="#"><i class="fas fa-angle-double-right"></i> Read More..</a></span>
+                                                <span>
+                                                    <a href="vulnerability-assessment.html"><i class="fas fa-angle-double-right"></i> Read More..</a>
+                                                </span>
                                             </p>
                                         </div>
                                     </div>
@@ -282,7 +295,9 @@
                                             <p>
                                                 For a system or IT infrastructure design, it is easy to be misguided or miscalculated the security measures. In fact, security threats are increasing as well as exploitation techniques and
                                                 tools.
-                                                <span><a href="#"><i class="fas fa-angle-double-right"></i> Read More..</a></span>
+                                                <span>
+                                                    <a href="information-security-consultancy.html"><i class="fas fa-angle-double-right"></i> Read More..</a>
+                                                </span>
                                             </p>
                                         </div>
                                     </div>
@@ -298,7 +313,9 @@
                                             <h3>Accounting Software Consultancy Services</h3>
                                             <p>
                                                 Accounting Software Consultancy Services
-                                                <span><a href="#"><i class="fas fa-angle-double-right"></i> Read More..</a></span>
+                                                <span>
+                                                    <a href="accounting-software-consultancy-services.html"><i class="fas fa-angle-double-right"></i> Read More..</a>
+                                                </span>
                                             </p>
                                         </div>
                                     </div>
@@ -461,7 +478,6 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="row footer-area">
-
                                 <div class="col-12 col-md-4">
                                     <div class="footer-item py-2">
                                         <div class="footer-item-heading">
@@ -476,7 +492,6 @@
                                     </div>
                                 </div>
                                 <!--// footer-item -->
-
 
                                 <div class="col-12 col-md-4">
                                     <div class="footer-item py-2">
@@ -508,7 +523,16 @@
 
                                         <div class="footer-item-content">
                                             <div class="facebook_page">
-                                                <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fpg/Wezapps.Limited&tabs&width=380&height=185&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="100%" height="185" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+                                                <iframe
+                                                    src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fpg/Wezapps.Limited&tabs&width=380&height=185&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
+                                                    width="100%"
+                                                    height="185"
+                                                    style="border: none; overflow: hidden;"
+                                                    scrolling="no"
+                                                    frameborder="0"
+                                                    allowTransparency="true"
+                                                    allow="encrypted-media"
+                                                ></iframe>
                                             </div>
                                         </div>
                                     </div>
@@ -530,32 +554,30 @@
                 </div>
             </div>
         </footer>
-         <!--// footer -->
+        <!--// footer -->
 
         <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-        <script type="text/JavaScript" src="assets/js/jquery.js"></script>
-        <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+        <script type="text/javascript" src="assets/js/jquery.js"></script>
+        <script type="text/javascript" src="assets/bootstrap/js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 
         <!-- navmenu JS -->
-        <script src="assets/js/navmenu.js"></script>
+        <script type="text/javascript" src="assets/js/navmenu.js"></script>
 
         <!-- Swiper Slider JS -->
-        <script src="assets/swiper-slider/swiper-bundle.min.js"></script>
-        <script src="assets/swiper-slider/custom-slider.js"></script>
+        <script type="text/javascript" src="assets/swiper-slider/swiper-bundle.min.js"></script>
+        <script type="text/javascript" src="assets/swiper-slider/custom-slider.js"></script>
 
         <!-- wow-master JS -->
-        <script src="assets/wow-master/js/wow.min.js"></script>
-        <script src="js/wow.min.js"></script>
+        <script type="text/javascript" src="assets/wow-master/js/wow.min.js"></script>
+        <script type="text/javascript" src="js/wow.min.js"></script>
         <script>
-              new WOW().init();
+            new WOW().init();
         </script>
 
-
         <!-- scrollTop -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script type="text/javascript">
-        var scrolltotop={setting:{startline:100,scrollto:0,scrollduration:1e3,fadeduration:[500,100]},controlHTML:'<img src="https://i1155.photobucket.com/albums/p559/scrolltotop/arrow7.png" />',controlattrs:{offsetx:5,offsety:5},anchorkeyword:"#top",state:{isvisible:!1,shouldvisible:!1},scrollup:function(){this.cssfixedsupport||this.$control.css({opacity:0});var t=isNaN(this.setting.scrollto)?this.setting.scrollto:parseInt(this.setting.scrollto);t="string"==typeof t&&1==jQuery("#"+t).length?jQuery("#"+t).offset().top:0,this.$body.animate({scrollTop:t},this.setting.scrollduration)},keepfixed:function(){var t=jQuery(window),o=t.scrollLeft()+t.width()-this.$control.width()-this.controlattrs.offsetx,s=t.scrollTop()+t.height()-this.$control.height()-this.controlattrs.offsety;this.$control.css({left:o+"px",top:s+"px"})},togglecontrol:function(){var t=jQuery(window).scrollTop();this.cssfixedsupport||this.keepfixed(),this.state.shouldvisible=t>=this.setting.startline?!0:!1,this.state.shouldvisible&&!this.state.isvisible?(this.$control.stop().animate({opacity:1},this.setting.fadeduration[0]),this.state.isvisible=!0):0==this.state.shouldvisible&&this.state.isvisible&&(this.$control.stop().animate({opacity:0},this.setting.fadeduration[1]),this.state.isvisible=!1)},init:function(){jQuery(document).ready(function(t){var o=scrolltotop,s=document.all;o.cssfixedsupport=!s||s&&"CSS1Compat"==document.compatMode&&window.XMLHttpRequest,o.$body=t(window.opera?"CSS1Compat"==document.compatMode?"html":"body":"html,body"),o.$control=t('<div id="topcontrol">'+o.controlHTML+"</div>").css({position:o.cssfixedsupport?"fixed":"absolute",bottom:o.controlattrs.offsety,right:o.controlattrs.offsetx,opacity:0,cursor:"pointer"}).attr({title:"Scroll to Top"}).click(function(){return o.scrollup(),!1}).appendTo("body"),document.all&&!window.XMLHttpRequest&&""!=o.$control.text()&&o.$control.css({width:o.$control.width()}),o.togglecontrol(),t('a[href="'+o.anchorkeyword+'"]').click(function(){return o.scrollup(),!1}),t(window).bind("scroll resize",function(t){o.togglecontrol()})})}};scrolltotop.init();</script>
+        <script type="text/javascript" src="assets/js/jquery3.3.1.js"></script>
+        <script type="text/javascript" src="assets/js/scrolltotop.js"></script>
     </body>
 </html>
