--- a/accounting-software-consultancy-services.html
+++ b/accounting-software-consultancy-services.html
@@ -130,7 +130,7 @@
 
                                         <!-- about-btn-area -->
                                         <div class="about-btn-area wow fadeInLeft">
-                                            <a href="#" class="btn custom-btn float-left mt-0">Learn more</a>
+                                            <a href="tally.html" class="btn custom-btn float-left mt-0">Learn more</a>
                                         </div>
                                     </div>
 
@@ -157,7 +157,7 @@
 
                                         <!-- about-btn-area -->
                                         <div class="about-btn-area wow fadeInRight">
-                                            <a href="#" class="btn custom-btn float-left mt-0">Learn more</a>
+                                            <a href="quick-book.html" class="btn custom-btn float-left mt-0">Learn more</a>
                                         </div>
                                     </div>
                                 </div>
