--- a/xero.html
+++ b/xero.html
@@ -37,16 +37,16 @@
                                     <div class="topHeader-leftIcon">
                                         <ul class="d-flex justify-content-start align-items-center">
                                             <li>
-                                                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                                                <a href="https://www.facebook.com/Wezapps.Limited" target="_blink"><i class="fab fa-facebook-f"></i></a>
                                             </li>
                                             <li>
-                                                <a href="#"><i class="fab fa-twitter"></i></a>
+                                                <a href="https://twitter.com/Wezapps_Limited" target="_blink"><i class="fab fa-twitter"></i></a>
                                             </li>
                                             <li>
-                                                <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                                                <a href="https://www.linkedin.com/company/wezappslimited" target="_blink"><i class="fab fa-linkedin-in"></i></a>
                                             </li>
                                             <li>
-                                                <a href="#"><i class="fab fa-instagram"></i></a>
+                                                <a href="https://www.instagram.com/wezapps.limited/" target="_blink"><i class="fab fa-instagram"></i></a>
                                             </li>
                                         </ul>
                                     </div>
@@ -96,7 +96,7 @@
                                         <li><a href="#">Services</a></li>
                                         <li><a href="#">Product</a></li>
                                         <li><a href="#">Blog</a></li>
-                                        <li><a href="#">Contact Us</a></li>
+                                        <li><a href="contact.html">Contact Us</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -342,12 +342,11 @@
                                             <ul>
                                                 <li><a href="#">PROJECTS</a></li>
                                                 <li><a href="#">CAREERS</a></li>
-                                                <li><a href="#">CONTACT</a></li>
                                             </ul>
                                             <ul class="pl-5">
                                                 <li><a href="#">ABOUT</a></li>
                                                 <li><a href="#">SERVICES</a></li>
-                                                <li><a href="#">CONTACT</a></li>
+                                                <li><a href="contact.html">CONTACT</a></li>
                                             </ul>
                                         </div>
                                     </div>
